🐞 fix: updata cover image link,dark mode icon

--- a/memos/assets/css/style.css
+++ b/memos/assets/css/style.css
@@ -5,7 +5,7 @@ body.light-theme,
     --color-background: #fff;
     --color-text-bg: #eaeaea;
     --color-text-hover: #eeeef1;
-    --color-memos-id: #536471;
+    --color-memoƒ-id: #536471;
     --color-img-border: #cfd9de;
     --color-tag: #2563eb;
     --color-tag-hover: #54a3ff;
@@ -172,6 +172,7 @@ blockquote {
 
 .theme-toggle {
     cursor: pointer;
+    color: #000;
 }
 
 .layout-cold .tl-cover .total {
